消えたCSS復旧

--- a/Downloads/posse3-hackathon-202309-team4D-feature-sakura/posse3-hackathon-202309-team4D-feature-sakura/html/3.5solve.html
+++ b/Downloads/posse3-hackathon-202309-team4D-feature-sakura/posse3-hackathon-202309-team4D-feature-sakura/html/3.5solve.html
@@ -14,12 +14,12 @@
 
 <body>
 <section class="quiz-section">
-  <div >
+  <div class="quiz">
   <div>
     <h1 class="title">POSSE③からの挑戦状！</h1>
   </div>
-  <div>
-    <p>
+  <div class="quiz-lead">
+    <p class="lead">
       ここではPOSSE③人たちが出した問題を解けます！出来た方は、是非「できた👍」ボタンを教えてください！
     </p>
   </div>
