--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- 
+        
+     -->
+     <link rel="stylesheet" type="text/css" href="css/4-1-4.css">
 </head>
 <body>
-    <header class="header " id="js-header">
+    <div id="splash">
+    <div id="splash_logo"><img src=""</div>   
+    </div>
+    <!-- <header class="header " id="js-header">
         <a href="./" class="header-logo">
             <img src="./img/logo.svg" alt="POSSE">
         </a>
@@ -30,6 +37,8 @@
             </ul>
         </nav>
     </header>
- <script src="js/particleText.js"></script>   
+    <div class="logo_fadein">
+        <p><img src="./assets/img/logo.svg" alt="posse"</p>
+    </div> -->
 </body>
 </html>
