--- a/html/3.5solve.html
+++ b/html/3.5solve.html
@@ -20,17 +20,19 @@
     </div>
     <div class="quiz-lead">
       <p class="lead">
-        ここではPOSSE③人たちが出した問題を解けます！出来た方は、是非「できた👍」ボタンを教えてください！
+        ここではPOSSE③人たちが出した問題を解けます！出来た方は、是非「できた👍」ボタンを押してください！
       </p>
     </div>
+  
     <form class="quiz-form">
       <textarea id="textarea" rows="4" cols="60" placeholder="問題文"></textarea>
       <button type="button" onclick="textcopy()">投稿</button>
     </form>
-    <hr>
-    <div id="insert">
-   </div>
   </div>
+    <hr>
+  <div id="insert">
+   </div>
+  
 </section>
 </body>
 </html>
