--- a/html/3.5solve.html
+++ b/html/3.5solve.html
@@ -13,6 +13,31 @@
 <!-- クイズのフォーム -->
 
 <body>
+  <header class="header " id="js-header">
+    <a href="./" class="header-logo">
+        <img src="../assets/img/logo.svg" alt="POSSE">
+    </a>
+    <button class="header-button" id="js-headerButton">
+        <span class="header-buttonLine"></span>
+        <span class="header-buttonLine"></span>
+        <span class="header-buttonLine"></span>
+    </button>
+    <nav class="header-nav">
+        <ul class="header-navList">
+            <li class="header-navItem">
+                <a href="#" class="header-navLink" target="_blank" rel="noopener noreferrer">
+                    <img src="../assets/img/E382B4E383BCE383ABE38389E381AEE795AAE58FB7-3-E381A4E381AEE799BD.jpg" alt="unofficial" class="header-img">
+                </a>
+            </li>
+            <li class="header-navItem">
+                <a href="#" class="header-navLink" target="_blank" rel="noopener noreferrer">
+                    <img src="../assets/img/numero-3-1.png" alt="写真・動画グループ" class="header-img">
+                </a>
+            </li>
+        </ul>
+    </nav>
+</header>
+
 <section class="quiz-section">
   <div class="quiz">
     <div>
