日向コンフリクト仮

--- a/html/1index.html
+++ b/html/1index.html
@@ -44,7 +44,7 @@
     <section class="mainV">
         <div class="mainV-lead">
             <span class="mainV-lead-inline">POSSE3</span>
-                成長サイト!
+                成長サイト!!
         </div>
     </section>
 
