フェードイン

--- a/html/1index.html
+++ b/html/1index.html
@@ -43,7 +43,8 @@
 
     <section class="mainV">
         <div class="mainV-lead">
-            <span class="mainV-lead-inline">POSSE3</span>
+            <span class="mainV-lead-inline">POSSE3
+            </span>
                 成長サイト
         </div>
     </section>
