--- a/html/2.5Answer.html
+++ b/html/2.5Answer.html
@@ -14,42 +14,19 @@
 <!-- Q&Aのフォーム -->
 
 <body>
-    <header class="header " id="js-header">
-        <a href="./" class="header-logo">
-            <img src="../assets/img/logo.svg" alt="POSSE">
-        </a>
-        <button class="header-button" id="js-headerButton">
-            <span class="header-buttonLine"></span>
-            <span class="header-buttonLine"></span>
-            <span class="header-buttonLine"></span>
-        </button>
-        <nav class="header-nav">
-            <ul class="header-navList">
-                <li class="header-navItem">
-                    <a href="#" class="header-navLink" target="_blank" rel="noopener noreferrer">
-                        <img src="../assets/img/E382B4E383BCE383ABE38389E381AEE795AAE58FB7-3-E381A4E381AEE799BD.jpg" alt="unofficial" class="header-img">
-                    </a>
-                </li>
-                <li class="header-navItem">
-                    <a href="#" class="header-navLink" target="_blank" rel="noopener noreferrer">
-                        <img src="../assets/img/numero-3-1.png" alt="写真・動画グループ" class="header-img">
-                    </a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-
     <section id="contact" class="QA-section">
+        <a href="./1index.html" class="page-top" ><img src="../assets/img/sozai_cman_jp_20230918022855.png" alt=""></a>
         <div class="quiz">
+            <div class="color"></div>
             <div >
                 <h1 class="title">助けて！POSSE③！</h1>
                 <a href="../html/3.5solve.html" class="lead">クイズに挑戦！</a>
                 <p class="lead">ここではプログラミングで悩んだところを匿名で質問できます!<br>POSSE③内でしか共有されないため安心してご使用ください。</p>
             </div>
             <div class="QA-inner inner--small">
-                <h1 class="message">質問を入力してください</h1>
+                <h2 class="message">質問を入力してください</h2>
                 <form class="quiz-form">
-                    <textarea id="textarea" rows="4" cols="40" placeholder="次のメモ"></textarea>
+                    <textarea id="textarea" rows="4" cols="30" placeholder="次のメモ"></textarea>
                     <button type="button" onclick="textcopy()">投稿</button>
                 </form>
             </div >
