--- a/html/3.5solve.html
+++ b/html/3.5solve.html
@@ -15,33 +15,10 @@
 <!-- クイズのフォーム -->
 
 <body>
-  <header class="header " id="js-header">
-    <a href="./" class="header-logo">
-        <img src="../assets/img/logo.svg" alt="POSSE">
-    </a>
-    <button class="header-button" id="js-headerButton">
-        <span class="header-buttonLine"></span>
-        <span class="header-buttonLine"></span>
-        <span class="header-buttonLine"></span>
-    </button>
-    <nav class="header-nav">
-        <ul class="header-navList">
-            <li class="header-navItem">
-                <a href="#" class="header-navLink" target="_blank" rel="noopener noreferrer">
-                    <img src="../assets/img/E382B4E383BCE383ABE38389E381AEE795AAE58FB7-3-E381A4E381AEE799BD.jpg" alt="unofficial" class="header-img">
-                </a>
-            </li>
-            <li class="header-navItem">
-                <a href="#" class="header-navLink" target="_blank" rel="noopener noreferrer">
-                    <img src="../assets/img/numero-3-1.png" alt="写真・動画グループ" class="header-img">
-                </a>
-            </li>
-        </ul>
-    </nav>
-</header>
-
-<section class="quiz-section">
+<section class="quizsection">
+  <a href="./1index.html" class="page-top" ><img src="../assets/img/sozai_cman_jp_20230918022855.png" alt=""></a>
   <div class="quiz">
+    <div class="color"></div>
     <div>
       <h1 class="title">POSSE③からの挑戦状！</h1>
       <a href="../html/2.5Answer.html" class="lead">質問する！</a>
@@ -53,7 +30,7 @@
     </div>
     <div>
     <form class="quiz-form">
-      <textarea id="textarea" rows="4" cols="60" placeholder="問題文"></textarea>
+      <textarea id="textarea" rows="4" cols="30" placeholder="問題文"></textarea>
       <button type="button" onclick="textcopy()">投稿</button>
     </form>
     </div>
