JS作業終了・CSS修正

--- a/html/1index.html
+++ b/html/1index.html
@@ -19,7 +19,7 @@
         <div class="loading-spin"></div>
     </div>
     <header class="header " id="js-header">
-        <a href="./" class="header-logo">
+        <a href="https://posse-ap.com/" class="header-logo">
             <img src="../assets/img/logo.svg" alt="POSSE">
         </a>
         <button class="header-button" id="js-headerButton">
