--- a/html/2.5Answer.html
+++ b/html/2.5Answer.html
@@ -21,7 +21,7 @@
             <div >
                 <h1 class="title">助けて！POSSE③！</h1>
                 <a href="../html/3.5solve.html" class="lead">クイズに挑戦！</a>
-                <p class="lead">ここではプログラミングで悩んだところを匿名で質問できます!<br>POSSE③内でしか共有されないため安心してご使用ください。</p>
+                <p class="text-lead">ここではプログラミングで悩んだところを匿名で質問できます!<br>POSSE③内でしか共有されないため安心してご使用ください。</p>
             </div>
             <div class="QA-inner inner--small">
                 <h2 class="message">質問を入力してください</h2>
