--- a/html/3.5solve.html
+++ b/html/3.5solve.html
@@ -24,7 +24,7 @@
       <a href="../html/2.5Answer.html" class="lead">質問する！</a>
     </div>
     <div class="quiz-lead">
-      <p class="lead">
+      <p class="text-lead">
         ここではPOSSE③人たちが出した問題を解けます！出来た方は、是非「できた👍」ボタンを押してください！
       </p>
     </div>
